# saas-churn-simulator

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  03_churn_modeling.ipynb  04_segmentation_analysis.ipynb  05_intervention_simulator.ipynb
src/: __init__.py  churn_definition.py  data_loader.py  features.py  models.py  segmentation.py  simulator.py
tests/: __init__.py  test_churn_definition.py  test_features.py
